--- a/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
+++ b/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
@@ -125,6 +125,9 @@
                                         <rect key="frame" x="112" y="35" width="46" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="ActionButtonClick:" destination="vk9-9N-bfA" eventType="touchUpInside" id="O2E-WU-4ti"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHI-4d-Hdb" userLabel="ResponseCount">
                                         <rect key="frame" x="228" y="40" width="42" height="21"/>
@@ -167,6 +170,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="ActionButton" destination="xTL-Wp-QAY" id="cDo-kD-t53"/>
+                        <outlet property="AddButton" destination="m9A-Ia-Qqe" id="tVX-tn-WQd"/>
+                        <outlet property="StatusLabel" destination="FHI-4d-Hdb" id="dXl-Ul-EdK"/>
                         <segue destination="JeC-t2-EWd" kind="show" identifier="QuizQuestionAnswer" id="0Ru-sq-noU"/>
                         <segue destination="VKK-K5-0Zb" kind="show" identifier="QuizQuestionEdit" id="Bz8-rC-pvS"/>
                     </connections>
@@ -567,6 +573,7 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="A12-qq-Y6g" secondAttribute="trailing" id="AAC-BX-3rk"/>
                                                     <constraint firstAttribute="height" constant="50" id="JO1-Ka-0Ck"/>
                                                 </constraints>
                                             </stackView>
@@ -611,6 +618,7 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="kDN-nv-PNu" secondAttribute="trailing" id="Pod-5O-Brb"/>
                                                     <constraint firstAttribute="height" constant="50" id="ebb-Vk-0sk"/>
                                                 </constraints>
                                             </stackView>
@@ -656,6 +664,7 @@
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="72k-RM-mTS"/>
+                                                    <constraint firstAttribute="trailing" secondItem="j3K-up-vah" secondAttribute="trailing" id="NpD-96-cAJ"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
@@ -699,6 +708,7 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="TGQ-fV-KGI" secondAttribute="trailing" id="13i-Ju-yNu"/>
                                                     <constraint firstAttribute="height" constant="50" id="SdB-zS-2Cn"/>
                                                 </constraints>
                                             </stackView>
@@ -713,11 +723,15 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="pBe-Hq-Seg" firstAttribute="height" secondItem="q2H-Up-Meu" secondAttribute="height" id="3C9-lI-Og2"/>
+                                    <constraint firstItem="BKz-LN-wxh" firstAttribute="width" secondItem="ZH1-o8-Gqj" secondAttribute="width" id="Fpv-Vv-hdY"/>
+                                    <constraint firstItem="22G-t3-qpZ" firstAttribute="width" secondItem="ZH1-o8-Gqj" secondAttribute="width" id="GKZ-KB-7ws"/>
                                     <constraint firstItem="vWp-fl-u6z" firstAttribute="width" secondItem="ZH1-o8-Gqj" secondAttribute="width" id="JJw-Zr-2xe"/>
                                     <constraint firstItem="22G-t3-qpZ" firstAttribute="height" secondItem="q2H-Up-Meu" secondAttribute="height" id="Jes-ut-cUq"/>
                                     <constraint firstItem="BKz-LN-wxh" firstAttribute="height" secondItem="q2H-Up-Meu" secondAttribute="height" id="TQI-oE-eFe"/>
+                                    <constraint firstItem="PjI-Tp-eaP" firstAttribute="width" secondItem="ZH1-o8-Gqj" secondAttribute="width" id="UTf-aS-PdQ"/>
                                     <constraint firstItem="vWp-fl-u6z" firstAttribute="height" secondItem="q2H-Up-Meu" secondAttribute="height" id="alD-sg-51b"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="800" id="fg9-bR-Fua"/>
+                                    <constraint firstItem="pBe-Hq-Seg" firstAttribute="width" secondItem="ZH1-o8-Gqj" secondAttribute="width" id="l2t-il-G9i"/>
                                     <constraint firstItem="q2H-Up-Meu" firstAttribute="width" secondItem="ZH1-o8-Gqj" secondAttribute="width" id="uhG-gm-ElR"/>
                                     <constraint firstItem="PjI-Tp-eaP" firstAttribute="height" secondItem="q2H-Up-Meu" secondAttribute="height" id="wPZ-yL-Rnj"/>
                                 </constraints>
@@ -732,7 +746,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="p3b-BK-G7z"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="IQR-xX-onH">
+                    <navigationItem key="navigationItem" title="Edit Question" id="IQR-xX-onH">
                         <rightBarButtonItems>
                             <barButtonItem title="Save" id="0Bi-4d-CsI" userLabel="Save">
                                 <connections>
