--- a/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
+++ b/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                         <outlet property="ActionButton" destination="xTL-Wp-QAY" id="cDo-kD-t53"/>
                         <outlet property="AddButton" destination="m9A-Ia-Qqe" id="tVX-tn-WQd"/>
                         <outlet property="StatusLabel" destination="FHI-4d-Hdb" id="dXl-Ul-EdK"/>
-                        <segue destination="JeC-t2-EWd" kind="show" identifier="QuizQuestionAnswer" id="0Ru-sq-noU"/>
+                        <segue destination="JeC-t2-EWd" kind="show" identifier="QuizQuestionAnswers" id="0Ru-sq-noU"/>
                         <segue destination="VKK-K5-0Zb" kind="show" identifier="QuizQuestionEdit" id="Bz8-rC-pvS"/>
                     </connections>
                 </viewController>
@@ -422,15 +422,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dve-Mg-P99">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dZR-Aq-8F1" userLabel="Controls">
+                                <rect key="frame" x="0.0" y="64" width="375" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="eUc-tZ-K5S"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dve-Mg-P99">
+                                <rect key="frame" x="0.0" y="164" width="375" height="454"/>
                                 <connections>
-                                    <segue destination="GEn-Sl-Zfh" kind="embed" id="qXD-J2-aMB"/>
+                                    <segue destination="GEn-Sl-Zfh" kind="embed" identifier="QuestionAnswerTable" id="qXD-J2-aMB"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dve-Mg-P99" firstAttribute="top" secondItem="dZR-Aq-8F1" secondAttribute="bottom" id="1eu-s3-jRO"/>
+                            <constraint firstItem="dve-Mg-P99" firstAttribute="leading" secondItem="icR-nT-JXE" secondAttribute="leading" id="7JJ-vK-HtQ"/>
+                            <constraint firstItem="dZR-Aq-8F1" firstAttribute="width" secondItem="icR-nT-JXE" secondAttribute="width" id="C4S-oJ-5Dv"/>
+                            <constraint firstItem="dZR-Aq-8F1" firstAttribute="top" secondItem="icR-nT-JXE" secondAttribute="top" id="KlB-UD-N2h"/>
+                            <constraint firstItem="dZR-Aq-8F1" firstAttribute="leading" secondItem="icR-nT-JXE" secondAttribute="leading" id="YAy-08-h81"/>
+                            <constraint firstItem="icR-nT-JXE" firstAttribute="bottom" secondItem="dve-Mg-P99" secondAttribute="bottom" id="dUF-ow-ft0"/>
+                            <constraint firstItem="dve-Mg-P99" firstAttribute="width" secondItem="icR-nT-JXE" secondAttribute="width" id="ogM-mo-6QK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="icR-nT-JXE"/>
                     </view>
                 </viewController>
@@ -438,20 +453,20 @@
             </objects>
             <point key="canvasLocation" x="3209" y="833"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Quiz Answer TableVC-->
         <scene sceneID="Mma-QQ-iGf">
             <objects>
-                <tableViewController id="GEn-Sl-Zfh" sceneMemberID="viewController">
+                <tableViewController id="GEn-Sl-Zfh" customClass="QuizAnswerTableVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Nhw-3H-qpI">
-                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="454"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="l6l-mJ-Q2M">
-                                <rect key="frame" x="0.0" y="28" width="240" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AnswerCell" id="l6l-mJ-Q2M">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="l6l-mJ-Q2M" id="TpP-NI-lfr">
-                                    <rect key="frame" x="0.0" y="0.0" width="240" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
