--- a/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
+++ b/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
@@ -121,25 +121,29 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HHD-S1-uHQ" userLabel="Controls">
                                 <rect key="frame" x="0.0" y="64" width="375" height="100"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xTL-Wp-QAY" userLabel="Post">
-                                        <rect key="frame" x="112" y="35" width="46" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHI-4d-Hdb" userLabel="ResponseCount">
+                                        <rect key="frame" x="15" y="39.5" width="150" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xTL-Wp-QAY" userLabel="Post">
+                                        <rect key="frame" x="210" y="35" width="150" height="30"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
                                             <action selector="ActionButtonClick:" destination="vk9-9N-bfA" eventType="touchUpInside" id="O2E-WU-4ti"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHI-4d-Hdb" userLabel="ResponseCount">
-                                        <rect key="frame" x="228" y="40" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="02Z-EF-1CT"/>
+                                    <constraint firstItem="FHI-4d-Hdb" firstAttribute="width" secondItem="HHD-S1-uHQ" secondAttribute="width" multiplier="0.4" id="9tZ-F3-Vvd"/>
+                                    <constraint firstItem="xTL-Wp-QAY" firstAttribute="centerY" secondItem="HHD-S1-uHQ" secondAttribute="centerY" id="A21-IV-hzg"/>
+                                    <constraint firstItem="FHI-4d-Hdb" firstAttribute="centerY" secondItem="HHD-S1-uHQ" secondAttribute="centerY" id="QTd-PP-JcH"/>
+                                    <constraint firstItem="xTL-Wp-QAY" firstAttribute="width" secondItem="HHD-S1-uHQ" secondAttribute="width" multiplier="0.4" id="Rd0-W2-mpf"/>
+                                    <constraint firstItem="FHI-4d-Hdb" firstAttribute="leading" secondItem="HHD-S1-uHQ" secondAttribute="leading" constant="15" id="bOS-M0-IOf"/>
+                                    <constraint firstAttribute="trailing" secondItem="xTL-Wp-QAY" secondAttribute="trailing" constant="15" id="uUj-SL-8Ap"/>
                                 </constraints>
                             </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sRb-de-c9G" userLabel="TableContainer">
@@ -255,14 +259,19 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="heC-dj-Hh4">
-                                            <rect key="frame" x="30" y="11" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="heC-dj-Hh4">
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="heC-dj-Hh4" secondAttribute="trailing" constant="15" id="6Sj-Gs-vBK"/>
+                                        <constraint firstItem="heC-dj-Hh4" firstAttribute="centerY" secondItem="YRo-iO-bh9" secondAttribute="centerY" id="Zdk-dV-fcj"/>
+                                        <constraint firstItem="heC-dj-Hh4" firstAttribute="leading" secondItem="YRo-iO-bh9" secondAttribute="leading" constant="15" id="hQM-bH-2ER"/>
+                                        <constraint firstItem="heC-dj-Hh4" firstAttribute="height" secondItem="YRo-iO-bh9" secondAttribute="height" id="sS3-eM-Zht"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="TitleLabel" destination="heC-dj-Hh4" id="fuN-8a-XwQ"/>
